fix: navToggle adjusted to rotate correctly on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -86,8 +86,9 @@ Navbar
   transition: all 0.3s linear;
   cursor: pointer;
   padding: 1rem;
+transform: rotate(0deg);
 }
-.nav-toggle:hover {
+.nav-toggle-rotate {
   transform: rotate(90deg);
 }
 .links {
